--- a/cat-question.html
+++ b/cat-question.html
@@ -4,7 +4,7 @@
     <title>专属猫咪小问卷</title>
     <style>
         body {
-            background: url('https://s21.ax1x.com/2025/03/04/pEJmT8s.jpg') center/cover no-repeat fixed;
+            background:linear-gradient(135deg, #f3e7e9 0%, #e3eeff 100%);
             display: flex;
             flex-direction: column;
             align-items: center;
